- 0004160: [bugtracker] Javascript error in the issue view pages (vboctor)
- 0004175: [bugtracker] Links are not hyperlinked properly if containing '[' or ']' (vboctor)
- 0004182: [bugtracker] print_all_bug_page should show all issues matching current filter (vboctor)
- 0003714: [upgrade] Please add in a way to transfer attachments from the database to disk (thraxisp)
- 0003877: [email] Upgrade to PHPMailer 1.72 (vboctor)
- 0002220: [installation] usage of consistent naming schema for images (vboctor)
- New Config: main_menu_custom_options (default empty) - Allow addition of custom menu options to main menu (vboctor)
- Updated German and Brazilian Portuguese language.

2004.07.20  -  0.19.0a2

This is the second alpha release for 0.19.0a, if there is not much issues with it then rc1 will probably follow.  The main features in this release are issue relationships and simple workflow control.  Also version handling was almost re-implemented to support released vs. future versions and also allow adding a description to versions.

- 0004018: [security] Real name field allows potentially dangerous HTML (int2str)
- 0004044: [security] Cross Site Scripting Vulnerability (int2str)
- 0003969: [feature] Issue Relationships Support (masc)
- 0003984: [feature] Support definining and enforcing custom workflow (thraxisp)
- 0004057: [feature] Add "notes" for versions (VictorBoctor)
- 0003974: [feature] Make Mantis issues searchable by Search Engine (int2str)
- 0004016: [feature] Automatic language selection based on browser preferences (int2str)
- 0004066: [feature] Support "future" versions and a description field (VictorBoctor)
- 0001210: [feature] Project Version could use some more details!!! (VictorBoctor)
- 0004120: [feature] Add issue id before summary in issue view pages (VictorBoctor)
- 0004104: [feature] Product Version Field in simple View (VictorBoctor)
- 0004118: [filters] Make filter display at top of View Issues collapsible (VictorBoctor)