@@ -19,6 +19,7 @@ Mantis ChangeLog
 - 0004175: [bugtracker] Links are not hyperlinked properly if containing '[' or ']' (vboctor)
 - 0004182: [bugtracker] print_all_bug_page should show all issues matching current filter (vboctor)
 - 0003714: [upgrade] Please add in a way to transfer attachments from the database to disk (thraxisp)
+- 0004078: [upgrade] Script to import the value of a custom field to a native field (thraxisp) 
 - 0003877: [email] Upgrade to PHPMailer 1.72 (vboctor)
 - 0002220: [installation] usage of consistent naming schema for images (vboctor)
 - New Config: main_menu_custom_options (default empty) - Allow addition of custom menu options to main menu (vboctor)
